<resources>
    <string name="app_name">NiceStart</string>
    <string name="name">Name</string>
    <string name="go">GO!</string>
    <string name="cancel">CANCEL</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="Register">REGISTER</string>
    <string name="logo">logo</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="passwd">Password</string>
    <string name="log">LOGIN</string>
    <string name="confirmar">Confirmar</string>
    <string name="email">Email</string>
    <string name="cancels">CANCEL</string>
    <string name="confirm">CONFIRM</string>
    <string name="confirm_password">Confirm password</string>
    <string name="lg">LOGIN</string>
    <string name="nicestart">NiceStart</string>
    <string name="profile">Profile</string>
    <string name="hola">HOLA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>