<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignUp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/ic_action_name"
        app:layout_constraintStart_toStartOf="@id/main"
        app:layout_constraintEnd_toEndOf="@id/main"
        app:layout_constraintTop_toTopOf="@id/main"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cajatxt1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@id/lineV2"
        app:layout_constraintStart_toStartOf="@id/lineV1"
        app:layout_constraintTop_toBottomOf="@id/logo">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:background="@color/white"
            android:alpha="0.6"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cajatxt2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@id/lineV2"
        app:layout_constraintStart_toStartOf="@id/lineV1"
        app:layout_constraintTop_toBottomOf="@id/cajatxt1"
        app:passwordToggleEnabled="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwd"
            android:background="@color/white"
            android:alpha="0.6"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cajatxt5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@id/lineV2"
        app:layout_constraintStart_toStartOf="@id/lineV1"
        app:layout_constraintTop_toBottomOf="@id/cajatxt2"
        app:passwordToggleEnabled="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:background="@color/white"
            android:alpha="0.6"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cajatxt4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="@id/lineV2"
        app:layout_constraintStart_toStartOf="@id/lineV1"
        app:layout_constraintTop_toBottomOf="@id/cajatxt5">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:background="@color/white"
            android:alpha="0.6"/>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/button1"
        android:text="@string/confirm"
        android:onClick="openProfile"
        app:layout_constraintBottom_toBottomOf="@id/button2"
        app:layout_constraintEnd_toEndOf="@id/lineV2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/lineV1"
        app:layout_constraintTop_toBottomOf="@id/cajatxt4"
        app:layout_constraintVertical_bias="0.224"
        style="@style/buttonflat" />

    <Button
        android:id="@+id/button2"
        style="@style/buttonOutline"
        android:layout_marginTop="10dp"
        android:onClick="openLogin"
        android:text="@string/cancels"
        app:layout_constraintBottom_toBottomOf="@id/main"
        app:layout_constraintEnd_toEndOf="@id/lineV2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/lineV1"
        app:layout_constraintTop_toTopOf="@id/button1"
        app:layout_constraintVertical_bias="0.224"
        app:strokeColor="@color/black" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lineV1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lineV2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.80" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lineH1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />


</androidx.constraintlayout.widget.ConstraintLayout>