<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".Login">


    <ImageView
        android:id="@+id/girl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitStart"
        android:src="@drawable/girl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/ic_action_name"
        app:layout_constraintStart_toStartOf="@id/main"
        app:layout_constraintEnd_toEndOf="@id/main"
        app:layout_constraintTop_toTopOf="@id/main"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@id/lineV2"
        app:layout_constraintStart_toStartOf="@id/lineV1"
        app:layout_constraintTop_toBottomOf="@id/logo">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:background="@color/white"
            android:alpha="0.6"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@id/lineV2"
        app:layout_constraintStart_toStartOf="@id/lineV1"
        app:layout_constraintTop_toBottomOf="@id/username">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/passwd"
            android:background="@color/white"
            android:alpha="0.6"/>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/button1"
        style="@style/buttonflat"
        android:layout_marginBottom="196dp"
        android:onClick="openMain"
        android:text="@string/log"
        app:layout_constraintBottom_toBottomOf="@id/main"
        app:layout_constraintEnd_toEndOf="@id/lineV2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/lineV1"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintVertical_bias="0.272" />

    <Button
        android:id="@+id/button2"
        style="@style/buttonOutline"
        android:onClick="openSignUp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="@id/main"
        app:layout_constraintEnd_toEndOf="@id/lineV2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/lineV1"
        app:layout_constraintTop_toBottomOf="@id/button1"
        app:layout_constraintVertical_bias="0.047"
        app:strokeColor="@color/white" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lineV1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lineV2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lineH1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />


</androidx.constraintlayout.widget.ConstraintLayout>