<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".editProfile">

    <ImageView
        android:id="@+id/banner"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="@id/main"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="@id/main"
        app:layout_constraintTop_toTopOf="@id/main" />

    <ImageView
        android:id="@+id/profileImg"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="@id/main"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="@id/main"
        app:layout_constraintTop_toTopOf="@id/main" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cajatxt1"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginTop="90dp"
        android:paddingLeft="10dp"
        app:boxCornerRadiusTopStart="5dp"
        app:layout_constraintEnd_toEndOf="@id/main"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/main"
        app:layout_constraintTop_toBottomOf="@id/banner">

        <EditText
            android:fontFamily="@font/abril_fatface"
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg"
            android:hint="@string/name"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cajatxt3"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="@id/main"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/main"
        app:layout_constraintTop_toBottomOf="@id/cajatxt1"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/currentpasswd"
            android:fontFamily="@font/abril_fatface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg"
            android:hint="Current password"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cajatxt2"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="@id/main"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/main"
        app:layout_constraintTop_toBottomOf="@id/cajatxt3"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/passwd"
            android:fontFamily="@font/abril_fatface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg"
            android:hint="New password"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cajatxt4"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="@id/main"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/main"
        app:layout_constraintTop_toBottomOf="@id/cajatxt5">

        <EditText
            android:id="@+id/email"
            android:fontFamily="@font/abril_fatface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg"
            android:hint="@string/email"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cajatxt5"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="@id/main"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/main"
        app:layout_constraintTop_toBottomOf="@id/cajatxt2"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/confirmpasswd"
            android:fontFamily="@font/abril_fatface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg"
            android:hint="@string/confirm_password"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/confirmar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/abril_fatface"
        android:text="Confirm"
        style="@style/landButton1"
        android:backgroundTint="@color/LightSteelBlue"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/main"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/cajatxt4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />
</androidx.constraintlayout.widget.ConstraintLayout>